# eden

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  run_eden.bat  run_eden.sh
config/: default.toml
data/logs/: benchmark_results.json  long_run_results.json
docs/: ARCHITECTURE.md  RASPBERRY_PI_SETUP.md  ROADMAP.md  SIMULATION_RULES.md
scripts/: benchmark.py  create_demo_world.py  eden.service  long_run.py  verify_installation.py
src/eden/: __init__.py  app.py  config.py  constants.py
src/eden/persistence/: __init__.py  database.py  migrations.py  repository.py
src/eden/rendering/: __init__.py  camera.py  effects.py  palette.py  renderer.py
src/eden/simulation/: __init__.py  brain.py  environment.py  events.py  evolution.py  genome.py  metrics.py  organisms.py  world.py
src/eden/ui/: __init__.py  controls.py  god_panel.py  history_panel.py  inspector.py  layout.py
src/eden/utilities/: __init__.py  logging_setup.py  profiling.py  random_utils.py
tests/: conftest.py  test_determinism.py  test_evolution.py  test_long_run.py  test_organisms.py  test_performance.py  test_persistence.py  test_render_smoke.py  test_world.py
